# SyncMeDaddy

./: Cargo.toml  README.md  setup.sh
client/: Cargo.toml
client/src/: main.rs  tcp.rs  utils.rs
client/src/tcp/: mod.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  smd_packet.rs  smd_type.rs
server/: Cargo.toml
server/src/: main.rs  tcp.rs  user.rs  utils.rs
server/src/tcp/: mod.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: data_transfer.rs  file.rs  file_state.rs  files.rs  lib.rs  my_json.rs  state.rs  update_answer.rs
