[package]
name = "smd_client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
path-absolutize = "3.1.1"
env_logger = "0.11.3"
log = "0.4.21"
smd_protocol = { path = "../protocol" }
utils = { path = "../utils" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.104", features = ["derive"] }
