[package]
name = "smd_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
path-absolutize = "3.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smd_protocol = { path = "../protocol" }
utils = { path = "../utils" }
